--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "pg": "^7.9.0"
   }
 }
