sequelize-rest finished

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "nodemon": "^1.19.0",
-    "pg": "^7.9.0"
+    "pg": "^7.9.0",
+    "sequelize": "^5.8.6"
   }
 }
